--- a/src/quoteGenerator/App.scss
+++ b/src/quoteGenerator/App.scss
@@ -1,21 +1,6 @@
 @charset "UTF-8";
 @import 'src/styles/text.scss';
 @import 'src/styles/colors.scss';
-html{
-  width: 100%;
-  height: 100%;
-}
-body{
-  background:
-    linear-gradient(
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3)
-    );
-  display: grid;
-  height: 100vh;
-  width: 100vw;
-  padding: 0;
-}
 
 @mixin button{
   font-family: $main-text;
@@ -26,43 +11,58 @@ body{
   margin: auto;
 }
 
-#background{
-  background-size: cover;
-  background: url('../images/evening-55067_640.png');
+$random: randomColor();
+
+html{
+  width: 100%;
+  height: 100%;
+}
+
+body{
+  background:
+    linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.3)
+    ),
+    $random;
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  padding: 0;
+}
+
+#root{
+  background-color: rgba(0,0,0,0);
 }
 
 .quoteBox{
-  background:
-  linear-gradient(
-    rgba(266, 255, 255, 0.5),
-    rgba(255, 255, 255, 0.5)
-  );
+  background: white;
 
   width: 80vw;
-  height: 70vh;
-  margin-left: 10vw;
-  margin-top: 15vh;
-  transform: translate(-5vw, -7.5vh);
+  height: auto;
+  margin-left: 20vw;
+  margin-top: 20vh;
+  transform: translate(-10vw, 10vh);
   padding: 10px;
 
   border-radius: 20px;
   border: 2px solid rgba(200, 200, 200, .8);
   overflow: hidden;
-  z-index: 2;
 
   display: grid;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: 3fr, 2fr, 20px;
   grid-template-areas: "quote quote quote quote"
                        ". . author author"
-                       "tweet . . new";
+                       "tweet tweet new new";
 
   #text{
-    font-family: $main-text;
+    color: rgba(160, 160, 160, 1);
     width: 100%;
     grid-area: quote;
     text-align: center;
     align-self: center;
+    padding: 10px;
 
     ::first-letter{
       font-size: 3em;
@@ -71,28 +71,38 @@ body{
   }
 
   #author{
-    font-family: $main-text;
-    font-size: 1.5em;
+    color: rgba(160, 160, 160, 1);
+    font-size: 2em;
+    font-weight: 800;
     grid-area: author;
     align-self: center;
     justify-self: center;
+    padding: 10px;
   }
 
   #new-quote{
     @include button;
-    color: $Casablanca-3-rgba;
+    color: #FFFF;
     background-color: $Casablanca-4-rgba;
     border: 2px solid $Casablanca-5-rgba;
     grid-area: new;
     align-self: flex-end;
   }
 
-  #twitter-widget-0{
+  #tweet-button{
     @include button;
     color: #FFFF;
     background-color: #1b95e0;
+    border: 2px solid #0084b4;
     grid-area: tweet;
     align-self: flex-end;
     align-content: center;
+
+    :link{
+      color: #FFFF;
+    }
+    :visited{
+      color: #FFFF;
+    }
   }
 }
