--- a/src/quoteGenerator/App.scss
+++ b/src/quoteGenerator/App.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import 'src/styles/text.scss';
 @import 'src/styles/colors.scss';
-
+@import-normalize;
 @mixin button{
   font-family: $main-text;
   height: auto;
