--- a/src/quoteGenerator/App.scss
+++ b/src/quoteGenerator/App.scss
@@ -12,6 +12,7 @@
 }
 
 $random: randomColor();
+$text-color: rgb(120, 120, 130);
 
 html{
   width: 100%;
@@ -19,12 +20,9 @@ html{
 }
 
 body{
-  background:
-    linear-gradient(
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3)
-    ),
-    $random;
+  background: url(../images/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   display: grid;
   height: 100vh;
   width: 100vw;
@@ -36,7 +34,7 @@ body{
 }
 
 .quoteBox{
-  background: white;
+  background: rgba(255,255,255, .8);
 
   width: 80vw;
   height: auto;
@@ -57,7 +55,7 @@ body{
                        "tweet tweet new new";
 
   #text{
-    color: rgba(160, 160, 160, 1);
+    color: $text-color;
     width: 100%;
     grid-area: quote;
     text-align: center;
@@ -71,7 +69,7 @@ body{
   }
 
   #author{
-    color: rgba(160, 160, 160, 1);
+    color: $text-color;
     font-size: 2em;
     font-weight: 800;
     grid-area: author;
